fix swagger delete
